--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
