--- a/server/package.json
+++ b/server/package.json
@@ -8,4 +8,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5"
   }
+  "scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "vercel-build": "npm run build"
+}
+
 }
