--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,8 @@
 {
+  {
   "version": 2,
-  "builds": [
-    {
-      "src": "*.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    { 
-      "src": "/(.*)", "dest": "/"
-    }
-  ]
+  "builds": [{ "src": "server/index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "server/index.js" }]
+  }
 }
 
